--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
+    "node-sass": "^3.2.0",
     "rc": "~0.5.0",
     "sails": "~0.11.0",
     "sails-disk": "~0.10.0",
@@ -35,5 +36,8 @@
     "url": "git://github.com/nguyenalexander/redirect.git"
   },
   "author": "nguyenalexander",
-  "license": ""
+  "license": "",
+  "devDependencies": {
+    "grunt-sass": "^1.0.0"
+  }
 }
