--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "cryptr": "^1.0.0",
     "ejs": "~0.8.4",
     "grunt": "0.4.2",
     "grunt-contrib-clean": "~0.5.0",
@@ -19,12 +20,14 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
+    "hashids": "^1.0.2",
     "include-all": "~0.1.3",
     "node-sass": "^3.2.0",
     "rc": "~0.5.0",
     "sails": "~0.11.0",
     "sails-disk": "~0.10.0",
-    "sails-mongo": "^0.11.2"
+    "sails-mongo": "^0.11.2",
+    "sails-postgresql": "^0.10.16"
   },
   "scripts": {
     "debug": "node debug app.js",
