--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
-    "hashids": "^1.0.2",
     "include-all": "~0.1.3",
+    "node-forge": "^0.6.34",
     "node-sass": "^3.2.0",
     "rc": "~0.5.0",
     "sails": "~0.11.0",
